--- a/src/main/webapp/CSS/admin.css
+++ b/src/main/webapp/CSS/admin.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     font-family: sans-serif;
-    background-color: #f5f5f5;
+    background-color: #ffd700;
 }
 
 .container {
