--- a/src/main/webapp/CSS/index.css
+++ b/src/main/webapp/CSS/index.css
@@ -14,7 +14,6 @@ h1 {
     margin-bottom: 20px;
 }
 
-
 table {
     border-collapse: collapse;
     background: white;
@@ -22,6 +21,8 @@ table {
     border-radius: 6px;
     box-shadow: 0 0 8px rgba(0,0,0,0.1);
     margin-top: 40px; /* 追加 */
+	
+	font-size: 150%;
 }
 
 td {
@@ -41,3 +42,4 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #eee;
 }
+
